# poc-generic_json_parser

./: README.md  cvelist_deltalog_mapping.json  datas_sari3l.json  mappingsari3l.json  parser.py
clean_snippets/GenericJsonNormalizer/: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements
clean_snippets/GenericJsonNormalizer/generic_json_normalizer/: __main__.py
clean_snippets/GenericJsonNormalizer/generic_json_normalizer/features/generic_json_normalizer/generic_normalize_json/: generic_normalize_json.feature
clean_snippets/GenericJsonNormalizer/generic_json_normalizer/src/: __init__.py
clean_snippets/GenericJsonNormalizer/generic_json_normalizer/src/app/adapter/generic_normalize_json/generic_normalized_json/: generic_normalized_json_adapter.py
clean_snippets/GenericJsonNormalizer/generic_json_normalizer/src/app/dto/generic_normalize_json/: generic_normalized_json_dto.py
clean_snippets/GenericJsonNormalizer/generic_json_normalizer/src/app/repository/inmemory/: inmemory_persist.py
clean_snippets/GenericJsonNormalizer/generic_json_normalizer/src/app/repository/inmemory/generic_normalize_json/: generic_normalized_json_inmemory_repository.py
clean_snippets/GenericJsonNormalizer/generic_json_normalizer/src/generic_json_normalizer/entity/generic_normalize_json/: generic_normalized_json.py
clean_snippets/GenericJsonNormalizer/generic_json_normalizer/src/generic_json_normalizer/gateway/: abstract_gateway.py
clean_snippets/GenericJsonNormalizer/generic_json_normalizer/src/generic_json_normalizer/gateway/generic_normalize_json/: generic_normalized_json_gateway.py
clean_snippets/GenericJsonNormalizer/generic_json_normalizer/src/generic_json_normalizer/usecase/generic_normalize_json/generic_normalized_json/: generic_normalized_json.py  generic_normalized_json_inputport.py  generic_normalized_json_inputport_builder.py  generic_normalized_json_outputport.py  generic_normalized_json_outputport_builder.py
clean_snippets/GenericJsonNormalizer/generic_json_normalizer/src/utils/: container.py  debug.py  singleton.py
clean_snippets/GenericJsonNormalizer/generic_json_normalizer/tests/: factory.py
clean_snippets/GenericJsonNormalizer/generic_json_normalizer/tests/features/generic_json_normalizer/generic_normalize_json/: test_generic_normalize_json.py
